# rosterpulse

./: .gitignore  BUILD.bazel  Pods.WORKSPACE  README.md  Tiltfile  WORKSPACE  dummy.go  go.mod  go.sum  go_deps.bzl  helm.BUILD  package.json  podfile_deps.py  tsconfig.json  yq.BUILD
clients/rosterpulse-ios/: BUILD.bazel
clients/rosterpulse-ios/Rosterpulse.tulsiproj/: project.tulsiconf
clients/rosterpulse-ios/Rosterpulse.tulsiproj/Configs/: Rosterpulse.tulsigen
clients/rosterpulse-ios/Sources/: AppDelegate.swift
clients/rosterpulse-ios/Sources/Models/: AccountDB.swift
clients/rosterpulse-ios/extra/: BUILD.bazel
clients/rosterpulse-ios/rosterpulse/: API.swift  AppDelegate.swift  ContentView.swift  Network.swift  SceneDelegate.swift  Schema.graphql  schema.json
clients/rosterpulse-ios/rosterpulse.xcodeproj/: project.pbxproj
clients/rosterpulse-ios/rosterpulse/Extensions/: UIColor.swift
clients/rosterpulse-ios/rosterpulse/Resources/: Info.plist
clients/rosterpulse-ios/rosterpulseUITests/: rosterpulseUITests.swift
clients/web-rosterpulse/: BUILD.bazel
clients/web-rosterpulse/config/: index.html.ejs  webpack.config.ts
clients/web-rosterpulse/src/: App.tsx  index.tsx
libraries/go-logger/cmd/logger/: BUILD.bazel  main.go
libraries/go-logger/pkg/: BUILD.bazel
libraries/go-logger/pkg/formatters/: BUILD.bazel
libraries/logger-go/pkg/: BUILD.bazel  logger.go
libraries/logger-go/pkg/formatters/: BUILD.bazel  pretty.go
libraries/logger-ts/: BUILD.bazel  jest.config.js
libraries/logger-ts/src/: index.ts  types.ts  utils.test.ts  utils.ts
libraries/logger-ts/src/factories/: index.ts  winston.ts
libraries/logger-ts/src/formatters/: decorations.ts
libraries/logger-ts/src/schemas/: basic.ts  index.ts
protos/accounts/: BUILD.bazel  accounts.pb.go  accounts.proto
services/accounts-gateway/: BUILD.bazel  go.mod  gqlgen.yml  server.go
services/accounts-gateway/graph/: BUILD.bazel  entity.resolvers.go  schema.graphql  schema.resolvers.go
services/accounts-gateway/graph/clients/: BUILD.bazel  clients.go
services/accounts-gateway/graph/model/: BUILD.bazel  model.go  models_gen.go
services/accounts-gateway/helm-chart/: BUILD.bazel  Chart.yaml  values.yaml  values_dev.yaml  values_local.yaml
services/accounts-gateway/helm-chart/templates/: NOTES.txt  deployment.yaml  ingress.yaml  service.yaml
services/accounts-service/: BUILD.bazel  main.go
services/accounts-service/app/: BUILD.bazel  app.go
services/accounts-service/grpc/: BUILD.bazel  accounts.go
services/accounts-service/helm-chart/: BUILD.bazel  Chart.yaml  values.yaml  values_local.yaml
services/accounts-service/helm-chart/templates/: NOTES.txt  hpa.yaml  ingress.yaml  service.yaml
services/accounts-service/models/: BUILD.bazel  accounts.go
services/accounts-service/repositories/: BUILD.bazel  accounts.go
services/accounts-service/repositories/commands/: BUILD.bazel  models.go
services/accounts-service/repositories/events/: BUILD.bazel  models.go
services/accounts-service/repositories/interfaces/: BUILD.bazel  accounts.go
services/channels-gateway/: BUILD.bazel  go.mod  gqlgen.yml  server.go
services/channels-gateway/graph/: BUILD.bazel  entity.resolvers.go  products.go  schema.resolvers.go
services/channels-gateway/graph/model/: BUILD.bazel
services/channels-gateway/helm-chart/: BUILD.bazel  Chart.yaml  values.yaml  values_dev.yaml  values_local.yaml
services/channels-gateway/helm-chart/templates/: NOTES.txt  deployment.yaml  hpa.yaml  service.yaml  serviceaccount.yaml
services/documents-gateway/: BUILD.bazel  go.mod  gqlgen.yml  server.go
services/documents-gateway/graph/: BUILD.bazel  entity.resolvers.go  reviews.go  schema.resolvers.go
services/documents-gateway/graph/model/: BUILD.bazel
services/documents-gateway/helm-chart/: BUILD.bazel  Chart.yaml  values.yaml  values_dev.yaml  values_local.yaml
services/documents-gateway/helm-chart/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  service.yaml
services/go-gateway-accounts/: BUILD.bazel  gqlgen.yml  server.go
services/go-gateway-accounts/graph/: BUILD.bazel  entity.resolvers.go  schema.resolvers.go
services/go-gateway-accounts/graph/clients/: BUILD.bazel  clients.go
services/go-gateway-accounts/graph/model/: BUILD.bazel  models_gen.go
services/go-gateway-accounts/helm-chart/: BUILD.bazel  Chart.yaml  values.yaml  values_local.yaml
services/go-gateway-accounts/helm-chart/templates/: _helpers.tpl  hpa.yaml  serviceaccount.yaml
services/go-gateway-channels/: BUILD.bazel  gqlgen.yml  server.go
services/go-gateway-channels/graph/: BUILD.bazel  entity.resolvers.go  products.go  schema.resolvers.go
services/go-gateway-channels/graph/model/: BUILD.bazel
services/go-gateway-channels/helm-chart/: BUILD.bazel  Chart.yaml  values.yaml  values_local.yaml
services/go-gateway-channels/helm-chart/templates/: _helpers.tpl  deployment.yaml  ingress.yaml
services/go-gateway-documents/graph/: BUILD.bazel  entity.resolvers.go  reviews.go  schema.resolvers.go
services/go-gateway-documents/graph/model/: BUILD.bazel
services/go-service-accounts/app/: BUILD.bazel  app.go
services/go-service-accounts/grpc/: BUILD.bazel  accounts.go
services/go-service-accounts/helm-chart/: BUILD.bazel  Chart.yaml  values.yaml  values_local.yaml
services/go-service-accounts/helm-chart/templates/: _helpers.tpl  deployment.yaml  serviceaccount.yaml
services/go-service-accounts/repositories/: BUILD.bazel  accounts.go
services/go-service-accounts/repositories/commands/: BUILD.bazel  models.go
services/go-service-accounts/repositories/events/: BUILD.bazel
services/go-service-accounts/repositories/interfaces/: BUILD.bazel  accounts.go
services/root-gateway/: BUILD.bazel
services/root-gateway/helm-chart/: BUILD.bazel  Chart.yaml  values.yaml  values_dev.yaml  values_local.yaml
services/root-gateway/src/: index.ts
services/ts-gateway-root/: BUILD.bazel
services/ts-gateway-root/helm-chart/: BUILD.bazel  Chart.yaml  values.yaml  values_local.yaml
services/ts-gateway-root/src/: index.ts
(+146 files in other folders)
