load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@bazel_gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle", "gazelle_binary")

gazelle_binary(
    name = "gazelle_binary",
    languages = DEFAULT_LANGUAGES + ["@golink//gazelle/go_link:go_default_library"],
    visibility = ["//visibility:public"],
)

package(default_visibility = ["//visibility:public"])

# gazelle:prefix github.com/scostello/rosterpulse
# gazelle:exclude node_modules
# gazelle:exclude tilt_modules
gazelle(
    name = "gazelle",
    gazelle = ":gazelle_binary",
)

exports_files([
    "tsconfig.json",
    "package.json",
])

go_library(
    name = "rosterpulse",
    srcs = ["dummy.go"],
    importpath = "github.com/scostello/rosterpulse",
)
