load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@build_bazel_rules_apple//apple:ios.bzl", "ios_application")
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

licenses(["notice"])

swift_library(
    name = "Sources",
    srcs = [
        "Sources/AppDelegate.swift",
        "Sources/Models/AccountDB.swift",
    ],
    data = [
        "Resources/Main.storyboard",
    ],
)

ios_application(
    name = "Rosterpulse",
    app_icons = ["//clients/rosterpulse-ios/extra:PhoneAppIcon.xcassets"],
    bundle_id = "com.rosterpulse.app",
    families = [
        "iphone",
        "ipad",
    ],
    infoplists = [":Info.plist"],
    launch_storyboard = "//clients/rosterpulse-ios/extra:Launch.storyboard",
    minimum_os_version = "12.0",
    deps = [
        ":Sources",
        ":pods"
    ],
)

objc_library(
    name = "pods",
    deps = [
        "//Vendor/Alamofire",
        "//Vendor/RxSwift",
    ]
)

# Not normally needed, just done for rules_apple's examples so a
# 'bazel test examples/...' ensures all Examples still build.
build_test(
    name = "ExamplesBuildTest",
    targets = [":Rosterpulse"],
)
