load("@npm//@bazel/rollup:index.bzl", "rollup_bundle")
load("//tools:ts_library.bzl", "ts_library")
load("//tools:jest.bzl", "jest_test")

package(default_visibility = ["//visibility:public"])

_DEPENDENCIES = [
    "@npm//@types",
    "@npm//colors",
    "@npm//logform",
    "@npm//moment",
    "@npm//winston",
    "@npm//winston-transport",
]

ts_library(
    name = "logger-ts",
    srcs = ["index.ts"] + glob(
        ["src/**/*.ts"],
        exclude = ["src/**/*.test.ts"],
    ),
    module_name = "@rosterpulse/logger-ts",
    deps = _DEPENDENCIES,
)

rollup_bundle(
    name = "bundle",
    config_file = "rollup.config.js",
    entry_point = "src/index.ts",
    format = "esm",
    deps = [
        ":logger-ts",
        "@npm//@rollup/plugin-commonjs",
        "@npm//@rollup/plugin-node-resolve",
        "@npm//rollup-plugin-node-polyfills",
        "@npm//rollup-plugin-sourcemaps",
    ],
)

jest_test(
    name = "test",
    srcs = glob(["src/**/*.ts"]),
    jest_config = ":jest.config.js",
    deps = _DEPENDENCIES + [
        "@npm//@babel/core",
        "@npm//@babel/preset-env",
        "@npm//@jest/transform",
        "@npm//babel-jest",
        "@npm//ts-jest",
    ],
)
