load("@golink//proto:proto.bzl", "go_proto_link")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "accounts_proto",
    srcs = ["accounts.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "accounts_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/scostello/rosterpulse/protos/accounts",
    proto = ":accounts_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "accounts",
    embed = [":accounts_go_proto"],
    importpath = "github.com/scostello/rosterpulse/protos/accounts",
    visibility = ["//visibility:public"],
)

go_proto_link(
    name = "accounts_go_proto_link",
    dep = ":accounts_go_proto",
    version = "v1",
)
