load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_library(
    name = "accounts-service_lib",
    srcs = ["main.go"],
    importpath = "github.com/scostello/rosterpulse/services/accounts-service",
    visibility = ["//visibility:private"],
    deps = ["//services/accounts-service/app"],
)

go_binary(
    name = "accounts-service",
    embed = [":accounts-service_lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "image",
    base = "@go_base_image//image",
    embed = [":accounts-service_lib"],
)
