load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_library(
    name = "accounts-gateway_lib",
    srcs = ["server.go"],
    importpath = "github.com/scostello/rosterpulse/services/go-gateway-accounts",
    visibility = ["//visibility:private"],
    deps = [
        "//libraries/go-logger/pkg",
        "//services/go-gateway-accounts/graph",
        "//services/go-gateway-accounts/graph/generated",
        "@com_github_99designs_gqlgen//graphql/handler",
        "@com_github_99designs_gqlgen//graphql/playground",
    ],
)

go_binary(
    name = "accounts-gateway",
    embed = [":accounts-gateway_lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "image",
    base = "@go_base_image//image",
    embed = [":accounts-gateway_lib"],
    # importpath = "github.com/scostello/rosterpulse/services/go-gateway-accounts",
)
