load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_library(
    name = "channels-gateway_lib",
    srcs = ["server.go"],
    importpath = "github.com/scostello/rosterpulse/services/go-gateway-channels",
    visibility = ["//visibility:private"],
    deps = [
        "//libraries/logger-go/pkg",
        "//services/go-gateway-channels/graph",
        "//services/go-gateway-channels/graph/generated",
        "@com_github_99designs_gqlgen//graphql/handler",
        "@com_github_99designs_gqlgen//graphql/handler/debug",
        "@com_github_99designs_gqlgen//graphql/playground",
    ],
)

go_binary(
    name = "channels-gateway",
    embed = [":channels-gateway_lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "image",
    base = "@go_base_image//image",
    embed = [":channels-gateway_lib"],
    # importpath = "github.com/scostello/rosterpulse/services/go-gateway-channels",
)
