load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "internal",
    srcs = ["logger.go"],
    importpath = "github.com/scostello/rosterpulse/libraries/go-logger/internal",
    visibility = ["//libraries/go-logger:__subpackages__"],
    deps = [
        "@com_github_rs_zerolog//:zerolog",
    ],
)

go_library(
    name = "pkg",
    srcs = ["logger.go"],
    importpath = "github.com/scostello/rosterpulse/libraries/go-logger/pkg",
    visibility = ["//visibility:public"],
    deps = ["@com_github_rs_zerolog//:zerolog"],
)
