load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "internal",
    srcs = ["logger.go"],
    importpath = "github.com/scostello/rosterpulse/libraries/logger-go/internal",
    visibility = ["//libraries/logger-go:__subpackages__"],
    deps = [
        "//libraries/logger-go/internal/formatters",
        "@com_github_rs_zerolog//:zerolog",
    ],
)

go_library(
    name = "pkg",
    srcs = ["logger.go"],
    importpath = "github.com/scostello/rosterpulse/libraries/logger-go/pkg",
    visibility = ["//visibility:public"],
    deps = ["@com_github_rs_zerolog//:zerolog"],
)
