load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "graph",
    srcs = [
        "entity.resolvers.go",
        "resolver.go",
        "schema.resolvers.go",
    ],
    importpath = "github.com/scostello/rosterpulse/services/accounts-gateway/graph",
    visibility = ["//visibility:public"],
    deps = [
        "//protos/accounts",
        "//services/accounts-gateway/graph/generated",
        "//services/accounts-gateway/graph/model",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
