load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "app",
    srcs = ["app.go"],
    importpath = "github.com/scostello/rosterpulse/services/accounts-service/app",
    visibility = ["//visibility:public"],
    deps = [
        "//services/accounts-service/grpc",
        "@com_github_gorilla_mux//:mux",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
