load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "grpc",
    srcs = ["accounts.go"],
    importpath = "github.com/scostello/rosterpulse/services/accounts-service/grpc",
    visibility = ["//visibility:public"],
    deps = [
        "//protos/accounts",
        "//services/accounts-service/models",
        "//services/accounts-service/repositories/interfaces",
        "@com_github_gofrs_uuid//:uuid",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
