load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "graph",
    srcs = [
        "entity.resolvers.go",
        "resolver.go",
        "reviews.go",
        "schema.resolvers.go",
    ],
    importpath = "github.com/scostello/rosterpulse/services/documents-gateway/graph",
    visibility = ["//visibility:public"],
    deps = [
        "//services/documents-gateway/graph/generated",
        "//services/documents-gateway/graph/model",
    ],
)
