load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "graph",
    srcs = [
        "entity.resolvers.go",
        "products.go",
        "resolver.go",
        "schema.resolvers.go",
    ],
    importpath = "github.com/scostello/rosterpulse/services/go-gateway-channels/graph",
    visibility = ["//visibility:public"],
    deps = [
        "//services/go-gateway-channels/graph/generated",
        "//services/go-gateway-channels/graph/model",
    ],
)
