load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "graph",
    srcs = [
        "entity.resolvers.go",
        "resolver.go",
        "reviews.go",
        "schema.resolvers.go",
    ],
    importpath = "github.com/scostello/rosterpulse/services/go-gateway-documents/graph",
    visibility = ["//visibility:public"],
    deps = [
        "//services/go-gateway-documents/graph/generated",
        "//services/go-gateway-documents/graph/model",
    ],
)
