load("@io_bazel_rules_k8s//k8s:object.bzl", "k8s_object")
load("//tools/helm:helm.bzl", "helm_chart", "helm_template")

helm_chart(
    name = "chart_tar",
    package_name = "go-service-accounts",
    srcs = glob(["**"]),
)

helm_template(
    name = "template",
    chart_tar = ":chart_tar",
    release_name = "go-service-accounts-dev",
    values_yaml_files = [
        ":values_dev.yaml",
        ":values_local.yaml",
    ],
)

k8s_object(
    name = "deploy",
    template = ":template",
)
